--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -18,5 +18,5 @@
 {% endblock %} {% block main %}
 <h1>404</h1>
 <p>That page doesn't even exist.</p>
-<p>Why don't you just <a href="{{ url_for('dashboard') }}">go back home</a>?</p>
+<p>Why don't you just <a href="{{ url_for('placeholder') }}">go back</a>?</p>
 {% endblock %}
