--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -7,10 +7,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="red nav-link " href="{{ url_for('drop_database') }}">Drop Database</a>
+                    <a class="red nav-link " href="{{ url_for('placeholder') }}">Drop Database</a>
                 </li>
                 <li class="nav-item">
-                    <a class="red nav-link" href="{{ url_for('init_database') }}">Initialize Database</a>
+                    <a class="red nav-link" href="{{ url_for('placeholder') }}">Initialize Database</a>
                 </li>
                 {% if current_user.is_authenticated %}
                 <li class="nav-item">
