--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -11,5 +11,5 @@
     </div>
     <button class="btn btn-lg btn-primary w-100 mt-3" type="submit">Sign in</button>
 </form>
-<p class="mt-3 text-center">Are you a new Parent? <a href="{{ url_for('signup') }}">Register here</a>.</p>
+<p class="mt-3 text-center">Are you a new Parent? <a href="{{ url_for('placeholder') }}">Register here</a>.</p>
 {% endblock %}
