--- a/app/templates/sidenav.html
+++ b/app/templates/sidenav.html
@@ -5,15 +5,15 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav flex-column mt-3">
             <li class="nav-item">
-                <a class="nav-link active" href="{{ url_for('dashboard') }}">Dashboard</a>
+                <a class="nav-link active" href="{{ url_for('placeholder') }}">Dashboard</a>
             </li>
             {% if current_user.user_type == 2 %}
             <li class="nav-item">
-                <a class="nav-link active" href="{{ url_for('viewstudentparent') }}">Your Child</a>
+                <a class="nav-link active" href="{{ url_for('placeholder') }}">Your Child</a>
             </li>
             {% endif %}
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('about') }}">About</a>
+                <a class="nav-link" href="{{ url_for('placeholder') }}">About</a>
             </li>
         </ul>
     </div>
