home page draft

--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -1,4 +1,5 @@
-<link rel="stylesheet" href="/static/css/login_form.css">{% block css %}{% endblock %} {% block main %}
+<link rel="stylesheet" href="/static/css/login_form.css">
+{% block css %}{% endblock %} {% block main %}
 <div class="login-body">
     <aside class="aside-login-right"></aside>
     <div class="login-boxes">
