--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,14 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <meta charset="utf-8"> -->
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <title>Database Project 1</title>
+    <!-- Bootstrap XXX (i took it out and chaned to base.html but its the same thing ish) -->
+    <link rel="stylesheet" href="/static/css/base.css">
 
-    <!-- Bootstrap -->
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-
-    <link rel="stylesheet" href="/static/css/app.css"> {% block css %} {% endblock%}
+    <link rel="stylesheet" href="/static/css/testbase.css"> {% block css %} {% endblock%}
 </head>
 
 <body>
@@ -17,10 +16,12 @@
     </header>
     <main>
         <div class="sidebar-box">
+            <!-- X this is the sidebar on the left -->
             {% include "sidenav.html" %}
         </div>
         <div class="true-body">
-            <div class="content-box">
+            <div class="main-area">
+            <!-- X The area in the middle of the page -->
                 {% include "header.html" %}
                 <div class="main-content">
                     {% include 'flash_messages.html' %} {% block main %}{% endblock %}
