--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -6,9 +6,16 @@
 <!-- bg-dark was forcing the colour -->
 <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{{ url_for('home') }}">ChavVLE</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <div class="home-btn">
+            <a href="{{ url_for('home') }}">
+                <img id="nav-home-icon" src="/static/uploads/graphics/home2.png" alt="Home">
+                <span class="navbar-brand">ChavVLE</span>
+            </a>
+        </div>
+        
+        <!-- <a class="navbar-brand" href="{{ url_for('home') }}">ChavVLE</a> -->
+        <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span> -->
       </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
