--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -1,2 +1,2 @@
 <hr>
-<p>Copyright &copy; Step by Step Pre-School Code Implementation</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Copyright &copy; Database COMP3161</p>
