--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -77,6 +77,12 @@
         align-content: flex-start;
         padding-left: 1vw;
         padding-right: 0.5vw;
-        background-color: #181818;
+        background-color: #212CA0;
         min-height: 100vh;
+    }
+    
+    #home-icon {
+        width: 50px;
+        height: 50px;
+        margin-right: 20px;
     }
