--- a/app/static/css/home.css
+++ b/app/static/css/home.css
@@ -9,15 +9,12 @@
 
 ul {
     list-style-type: none;
-    padding-left: 0;
-  }
-  
-
+    /* padding-left: 0; */
+}
 
 .left-section {
     flex-basis: 70%;
     padding: 30px;
-    
 }
 
 .right-section {
@@ -60,38 +57,36 @@ ul {
     min-width: 20vw;
 }
 
-#title{
+#title {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    
-    
     /* font-weight: bold; */
     font-size: 50;
     color: #2154a0;
     font-weight: bolder;
 }
 
-
 .course-title {
     margin: 0;
     color: rgb(9, 74, 153) !important;
 }
+
 .course-lecturer {
     margin: 0;
     color: rgb(111, 111, 111);
     font-weight: bold;
 }
+
 .course-description {
     margin-top: 5px;
     margin-bottom: 5px;
     color: rgb(41, 89, 186);
     font-weight: bold;
 }
+
 a:hover {
     text-decoration: none;
-  }
- 
-  
+}
 
 
 /* Right Side of Page */
@@ -100,7 +95,6 @@ a:hover {
     display: flex;
     align-items: center;
     padding-bottom: 20px;
-    
 }
 
 #forum-icon {
@@ -108,6 +102,7 @@ a:hover {
     height: 30px;
     margin-right: 10px;
 }
+
 .forum-box {
     /* border-radius: 10px; */
     border: 1px solid rgba(217, 217, 217, 0.449);
@@ -116,32 +111,36 @@ a:hover {
     box-shadow: 2px 2px 10px #88888852;
     background-color: white;
 }
+
 #forum-header {
     font-size: 25px;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     color: rgb(37, 107, 168);
     font-weight: bold;
-
 }
 
-.forum-title{
+.forum-title {
     font-size: 20px;
     color: rgb(117, 34, 196);
     margin: 0;
 }
-.forum-date-poster{
+
+.forum-date-poster {
     color: rgb(0, 171, 180);
     font-weight: bold;
     margin: 0;
 }
-.forum-description{
+
+.forum-description {
     color: rgb(5, 64, 81);
 }
-#calendar-box{
+
+#calendar-box {
     margin-bottom: 20px;
 }
-#calendar{
+
+#calendar {
     width: 100%;
     box-shadow: 2px 2px 10px #4849797d;
     border-radius: 10px;
