--- a/app/templates/forum.html
+++ b/app/templates/forum.html
@@ -1,10 +1,15 @@
-<link rel="stylesheet" href="/static/css/test.css">
-{% extends "base.html" %}
-{% block main %}
-
-<h1 class="display-5 fw-bold">Forum Page</h1>
-<!-- <img src="/static/uploads/profilepic.jpg" alt="Profile Picture" class="profile-pic"> -->
-<p>This webpage is about {{ name }}.</p>
-
-{% endblock %}
-
+<link rel="stylesheet" href="/static/css/home.css"> {% extends "base.html" %} {% block main %}
+<div class="container">
+    <div class="left-section">
+        <div class="home-header-container">
+            <h3 class="course-title">Forum Title: {{forum.forum_name}}</h3>
+        </div>
+        <div class="course-box">
+            <h3>Threads</h3>
+            <hr> {% for thread in threads %}
+            <h4><a href="{{ url_for('thread_view',forum_id = forum.forum_id, thread_id=thread.thread_id) }}">{{thread.title}}</a></h4>
+            <p>{{thread.message}}</p>
+            <hr> {% endfor %}
+        </div>
+    </div>
+    {% endblock %}
