--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,8 +1,8 @@
-{% extends 'base.html' %} {% block main %}
+<link rel="stylesheet" href="/static/css/home.css">{% extends 'base.html' %} {% block main %}
 
 <form class="form-login m-auto" method="post">
     {{ form.csrf_token }}
-    <h2>Parent Login Portal</h2>
+    <h2>User Login</h2>
     <div class="form-floating">
         {{ form.username.label() }}{{ form.username(class='form-control', placeholder="Enter your username") }}
     </div>
@@ -11,5 +11,5 @@
     </div>
     <button class="btn btn-lg btn-primary w-100 mt-3" type="submit">Sign in</button>
 </form>
-<p class="mt-3 text-center">Are you a new Parent? <a href="{{ url_for('placeholder') }}">Register here</a>.</p>
+<p class="mt-3 text-center">Don't have an account? <a href="{{ url_for('placeholder') }}">Register here</a>.</p>
 {% endblock %}
