--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -7,7 +7,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
         <div class="home-btn">
-            <a href="{{ url_for('home') }}">
+            <a href="{{ url_for('landing') }}">
                 <img id="nav-home-icon" src="/static/uploads/graphics/home2.png" alt="Home">
                 <span class="navbar-brand">ChavVLE</span>
             </a>
