--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,15 +1,21 @@
 <link rel="stylesheet" href="/static/css/home.css">{% extends 'base.html' %} {% block main %}
+<div class="container">
+    <form class="form-login" method="post">
+        <div class="row">
+            {{ form.csrf_token }}
+            <div class="col-md-12">
+                <h2>User Login</h2>
+            </div>
+            <div class="col-md-12">
+                {{ form.username.label() }}{{ form.username(class='form-control', placeholder="Enter your username") }}
+            </div>
+            <div class="col-md-12">
+                {{ form.password.label() }}{{ form.password(class='form-control', placeholder="Enter your password") }}
+            </div>
+            <div class="col-md-12"> <button class="btn btn-lg btn-primary w-100 mt-3" type="submit">Sign in</button></div>
+        </div>
+    </form>
+</div>
 
-<form class="form-login m-auto" method="post">
-    {{ form.csrf_token }}
-    <h2>User Login</h2>
-    <div class="form-floating">
-        {{ form.username.label() }}{{ form.username(class='form-control', placeholder="Enter your username") }}
-    </div>
-    <div class="form-floating">
-        {{ form.password.label() }}{{ form.password(class='form-control', placeholder="Enter your password") }}
-    </div>
-    <button class="btn btn-lg btn-primary w-100 mt-3" type="submit">Sign in</button>
-</form>
 <p class="mt-3 text-center">Don't have an account? <a href="{{ url_for('placeholder') }}">Register here</a>.</p>
 {% endblock %}
