--- a/app/templates/sidenav.html
+++ b/app/templates/sidenav.html
@@ -5,7 +5,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav flex-column mt-3">
             <li class="nav-item">
-                <a class="nav-link active" href="{{ url_for('placeholder') }}">Dashboard</a>
+                <a class="nav-link active" href="{{ url_for('frontend_logout') }}">Logout</a>
             </li>
             {% if current_user.user_type == 2 %}
             <li class="nav-item">
